--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <h2>⚠️ Almost Done!</h2>
           <p>You must watch at least <b>2 minutes</b> of the video to unlock this file.<br>
           Please go and watch it fully, then return here.</p>
-          <a href="https://youtu.be/ipShhM_7c-k?si=VdJmiw7DZDLBNVF0" target="_blank" class="btn">▶ Watch Now</a>
+          <a href="https://youtu.be/ipShhM_7c-k?si=Vt34-nEGGEPOANbp" target="_blank" class="btn">▶ Watch Now</a>
         `;
 
         setTimeout(() => {
