--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <h2>🎮 Unlock MLBB Advance Server File</h2>
     <p><b>Step 1:</b> Complete the tasks below</p>
     <a href="https://youtube.com/@jerryeditsjg?si=LB4hU126asmRYX7s?sub_confirmation=1" class="btn" id="subBtn" target="_blank">🔔 Subscribe</a>
-    <a href="https://youtu.be/InTCVOQlmno?si=78-0O9ge0IsYuM7l" class="btn" id="likeBtn" target="_blank">👍 Like Video</a>
+    <a href="https://youtu.be/ipShhM_7c-k?si=Vt34-nEGGEPOANbp" class="btn" id="likeBtn" target="_blank">👍 Like Video</a>
     <br><br>
     <a href="#" class="btn hidden" id="downloadBtn">📥 Download Advance Server</a>
   </div>
